--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "add-labels-to-issue",
+  "name": "delete-labels-from-issue",
   "version": "1.0.0",
-  "description": "An action to add labels to an issue or PR.",
+  "description": "An action to delete labels from an issue or PR.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,9 +14,9 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ActionsRML/add-labels-to-issue/issues"
+    "url": "https://github.com/IlyaMurashkaSharekey/delete-labels-from-issue/issues"
   },
-  "homepage": "https://github.com/ActionsRML/add-labels-to-issue#readme",
+  "homepage": "https://github.com/IlyaMurashkaSharekey/delete-labels-from-issue#readme",
   "dependencies": {
     "@actions/core": "^1.2.4",
     "@actions/github": "^4.0.0",
